cfn/rds.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'RDS PostgreSQL Instance'
Parameters:
  vpcId:
    Type: String
    Default: vpc-0860bf057265a50b6
  subnetIds:
    Type: CommaDelimitedList
    Default: 'subnet-0e6e508390d648b41,subnet-029ab486574de06a3,subnet-0cf035af13267c942'
Resources:
  DatabaseSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnets available for the RDS DB Instance
      SubnetIds: !Ref subnetIds
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access to RDS
      VpcId: !Ref vpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '5432'
        ToPort: '5432'
        CidrIp: 10.0.0.0/16
      - IpProtocol: tcp
        FromPort: '5432'
        ToPort: '5432'
        CidrIp: 75.68.245.53/32
  Database:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 20
      AutoMinorVersionUpgrade: true
      VPCSecurityGroups:
        - !Ref SecurityGroup
      DBInstanceClass: 'db.t2.micro'
      DBInstanceIdentifier: 'sheds-fpe'
      DBSubnetGroupName: !Ref DatabaseSubnetGroup
      Engine: 'postgres'
      EngineVersion: 12.3
      MasterUsername: 'jeff'
      MasterUserPassword: 'sheds-fpe'
      MultiAZ: false
      PubliclyAccessible: true
      Port: 5432
      StorageType: gp2
Outputs:
  DBAddress:
    Description: Database endpoint address
    Value:
      Fn::GetAtt:
      - Database
      - Endpoint.Address
  DBPort:
    Description: Database endpoint port
    Value:
      Fn::GetAtt:
      - Database
      - Endpoint.Port
